<resources>
    <string name="app_name">海淘拼单</string>

    <string name="tab_home">首页</string>
    <string name="tab_promotions">优惠</string>
    <string name="tab_message">消息</string>
    <string name="tab_personal">个人</string>
    <string name="tab_recommend">最新推荐</string>
    <string name="tab_make_up">个护化妆</string>
    <string name="tab_bag">服饰鞋包</string>

    <string name="home_fragment_want_buy">想买些啥呢~</string>
    <string name="exit_login">退出登录</string>
    <string name="please_login">请登录</string>
    <string name="hint_input_email">请输入邮箱账号</string>
    <string name="click_register">点击注册→</string>
    <string name="email_verify_to_login">请点击邮件验证后再进行登录~</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_name">请输入用户名(不可更改)</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="choose_dialog_title">选择品牌</string>
    <string name="confirm_add_price">确认添加</string>
    <string name="add_price">+ 添加价格</string>

</resources>
