<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.bishe.haitaoshopping.personal.LoginActivity">

    <com.bishe.haitaoshopping.component.titlebar.TitleBar
        android:id="@+id/login_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/icon_app"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_input_email"
        android:textColorHint="#a6a6a6"
        android:textSize="13sp"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/tab_divide_line"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_name"
        android:textColorHint="#a6a6a6"
        android:textSize="13sp"
        android:visibility="gone"
        android:background="@null"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"/>

    <View
        android:id="@+id/divide_et_name"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="@color/tab_divide_line"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_pwd"
        android:textColorHint="#a6a6a6"
        android:textSize="13sp"
        android:background="@null"
        android:inputType="textPassword"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/tab_divide_line"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/tv_need_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#505050"
            android:visibility="invisible"
            android:text="@string/email_verify_to_login"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#505050"
            android:layout_alignParentRight="true"
            android:text="@string/click_register"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="#b8cfe6" />



</LinearLayout>
